[package]
name = "debot"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
num-rational = "0.3.2"
num = "0.2"
url = "2.2.2"
async-trait = "0.1.68"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.24"
futures = "0.3.28"
bson = "2.0.0"
env_logger = "0.10.0"
log = "0.4.17"
anyhow = "1.0.71"
rand = "0.8.5"
lazy_static = "1.4.0"
hex-literal = "0.4.1"
async-recursion = "1.0.4"
bigdecimal = "0.3.1"
chrono-tz = "0.8.2"
ctor = "0.1"

debot-market-analyzer = "1.0.*"
debot-position-manager = "1.2.*"
debot-utils = "1.0.*"
debot-db = "1.2.*"
#dex-connector = { path = "../dex-connector" }
dex-connector = "0.0.*"

[[bin]]
name = "debot"
path = "src/main.rs"
