[package]
name = "debot"
version = "1.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
num = "0.2"
url = "2.2.2"
async-trait = "0.1.68"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.24"
futures = "0.3.28"
bson = "2.0.0"
env_logger = "0.10.0"
log = "0.4.17"
rand = "0.8.5"
lazy_static = "1.4.0"
rust_decimal = { version = "1.0", features = ["serde"] }
smartcore = { version = "0.3.2", features = ["serde"] }
native-tls = "0.2.12"
lettre = "0.11.9"
csv = "1.3.0"
debot-utils = "1.0.*"

debot-db = "1.7.*"
debot_ml = "1.7.*"
debot-market-analyzer = "1.7.*"
debot-position-manager = "1.7.*"
dex-connector = "1.4.*"

[[bin]]
name = "debot"
path = "src/main.rs"
